# TangoCamera

./: .gitignore  README.md
Analysis/: ply-analysis.py  ply-display.py  ply-filter.py  ply-sort.py  project.py  select.py  test.ply
Analysis/data/: 20171122163055.165-94478.413933571.yaml
app/: AndroidManifest.xml  CMakeLists.txt  build.gradle  clear.sh  pull.sh  signatures.sh  svg2res.sh
app/c++/: OGLShaderUtils.cc  OGLShaderUtils.h  Renderer.cc  Renderer.h  itango.cc
app/c++/include/: android-logging.h
app/res/drawable/: ic_info_black_24dp.xml  ic_launcher_background.xml  ic_notifications_black_24dp.xml  ic_sync_black_24dp.xml  redborder.xml
app/res/drawable-v24/: ic_launcher_foreground.xml
app/res/layout/: activity_main.xml
app/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/res/values/: strings.xml  styles.xml
app/res/xml/: preferences.xml
app/src/to/ar/tango/tangocamera/: ITango.java  MainActivity.java  PostProcessThread.java  PrefActivity.java  RingBuffer.java  TangoInitializationHelper.java
app/test/java/to/ar/tango/tangocamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
